# vesselharbor

./: .aiignore  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  dockerstart.sh  env.example  pyproject.toml
.junie/: README.md  api-endpoints.md  architecture.md  authentication.md  blablah.md  config.json  database.mmd  git_workflow.md  guidelines.md  logical_architecture.md  makefile.md  openapi.json  plugins.md  project_structure.md  temporaire.md  testing.md  troubleshooting.md  vscode_settings.json
.junie/git-hooks/: commit-msg  pre-commit  pre-push
app/: CONTRIBUTING.md  Dockerfile  README.md  __init__.py  main.py
app/api/: audit_logs.py  auth.py  elements.py  environments.py  functions.py  groups.py  health.py  organizations.py  policies.py  rules.py  tags.py  teapot.py  user_assignments.py  user_groups.py  users.py
app/core/: auth.py
app/database/: seed.py  session.py
app/helper/: animalname.py  audit.py  email.py  permissions.py  response.py  security.py
app/models/: __init__.py  application.py  audit_log.py  container_cluster.py  container_node.py  dns_provider.py  dns_record.py  dnssec_key.py  (+30 more)
frontend/: .env  .eslintignore  .eslintrc.cjs  .prettierrc  CONTRIBUTING.md  Dockerfile  README.md  components.d.ts  eslint.config.js  index.html  lint-staged.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts  unocss.config.ts  vite.config.ts
(+269 files in other folders)
